fix white space

--- a/src/scss/components/_common.scss
+++ b/src/scss/components/_common.scss
@@ -30,6 +30,13 @@ $grey3: rgba(65, 61, 75, 0.3);
 $darkGrey7: rgba(51, 51, 51, 0.7);
 
 //classes
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 .container {
   width: 70%;
 }
