--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,6 +1,9 @@
 
 .header-body {
   position: relative;
+  .navbar, .nav {
+    float: none;
+  }
   .navbar {
     position: absolute;
     z-index: 2;
